fix tps commands

--- a/docs/docs/api/cli.mdx
+++ b/docs/docs/api/cli.mdx
@@ -97,7 +97,7 @@ system.
 <Example>
 
 ```bash
-> tps list
+tps list
 Global:
 - react-component
 Local:
@@ -135,7 +135,7 @@ few modifications
 Copy Templates default [`react-component`](../main/templates/react-component).
 
 ```bash
-> tps copy react-component
+tps copy react-component
 ```
 
 Produces:
