--- a/docs/docs/main/create-new-template/packages.mdx
+++ b/docs/docs/main/create-new-template/packages.mdx
@@ -218,7 +218,7 @@ render the template, TPS will prompt them questions and dynamically adjusts its
 behavior based on the users response
 
 ```bash
-❯ tps node-server new-app
+tps node-server new-app
 # highlight-next-line
 ? Would you like to include unit tests? (true)
 ```
