--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -15,8 +15,8 @@ import { BadgeList, VersionBadge } from '@site/docs/components/badges';
 ## What is a prompt
 
 ```bash
-❯ tps react-component Nav
-? Would you like to include unit tests? (true)
+tps react-component Nav
+? Would you like to include unit tests? (Y/n)
 ```
 
 Prompting is a useful feature that allows you to obtain data from the user. By
@@ -142,7 +142,7 @@ When the user renders a new instance they will see the message added in your
 prompt
 
 ```bash
-❯ tps react-component Nav
+tps react-component Nav
 # highlight-next-line
 ? Would you like to include unit tests?
 ```
@@ -187,7 +187,7 @@ prompting you would like to use. You can see more about this property in the
 Produces
 
 ```bash
-❯ tps react-component Nav
+tps react-component Nav
 ? Are you over the age of 18?
 ```
 
@@ -273,7 +273,7 @@ When the user is rendering a new template, the prompt will be displayed and they
 can answer.
 
 ```bash
-❯ tps express-app newApp
+tps express-app newApp
 ? Would you like to include unit tests?
 ```
 
@@ -361,7 +361,7 @@ When the user is rendering a new instance, the prompt will be displayed and the
 user can answer.
 
 ```bash
-❯ tps express-app newApp
+tps express-app newApp
 ? What type of framework would you like to use?
 > react
   angular
