--- a/docs/docs/main/templates/yargs-cli-cmd.mdx
+++ b/docs/docs/main/templates/yargs-cli-cmd.mdx
@@ -169,11 +169,11 @@ tps yargs-cli-cmd cli/commands/list
 
 You will be prompted to answer the following questions:
 
-```text
+```bash
 ? What type of file style do you want to use?
 ? Would you like to use typescript?
 ? What type of extension do you want for your file?
-? Please add a description
+? Please add a description?
 ```
 
 Based on your responses to the prompts, templates will generate a `list.js` file
