Redo Create templates home page and add templates types

--- a/docs/docs/main/create-new-template/index.mdx
+++ b/docs/docs/main/create-new-template/index.mdx
@@ -3,27 +3,35 @@ pagination_next: main/create-new-template/templates
 pagination_prev: main/intro
 ---
 
-# Creating new templates
+# Creating New Templates
 
-Are you ready to take your development game to the next level? With our powerful
-template creation feature, you can now build custom templates tailored to your
-project's needs, making your development process smoother and more productive.
+This guide will walk you through the process of creating a new template from
+scratch. You will learn things like:
 
-Our step-by-step guide will walk you through the process of creating a new
-template from scratch. From defining prompt questions to configuring options,
-you'll have the flexibility to design templates that suit various use cases.
+-   [Where templates live and their structure](./templates.mdx)
+-   [Packages](./packages.mdx)
+-   [Dynamic files](./dynamic-files.mdx)
+-   [Template Settings](./settings.mdx)
+-   [Prompting](./prompts.mdx)
 
-Let's dive in and unleash the potential of your project templates! Follow our
-detailed documentation on how to create a new template and unlock a world of
-possibilities for your development workflow. Happy templating!
+## Playground
 
-:::caution Prerequsites
+Our [playground page](/playground) is a great resource to keep in mind as you go
+through these docs. This page allows you to test features of templates quickly
+and easily without touching code.
 
-Please initialize your repo with templates before continuing. This will create
-the necessary components needed in order to create a template
+## Inspiration
 
-```bash
-tps init
-```
+If you're looking for some inspiration, you can check out our default template
+code on
+[GitHub](https://github.com/marcellino-ornelas/templates/tree/master/.tps). Our
+templates always use best practices, advanced use cases, and incorporate new
+upcoming features.
 
-:::
+## Help/Questions/Feedback/Issues
+
+| Type              | link                                                                                                                    |
+| ----------------- | ----------------------------------------------------------------------------------------------------------------------- |
+| Questions or Help | [Q&A discussion](https://github.com/marcellino-ornelas/templates/discussions/categories/q-a)                            |
+| Feedback          | [Feedback discussion](https://github.com/marcellino-ornelas/templates/discussions/categories/feature-requests-feedback) |
+| Issues            | [Issues](https://github.com/marcellino-ornelas/templates/issues)                                                        |
