--- a/docs/docs/main/create-new-template/index.mdx
+++ b/docs/docs/main/create-new-template/index.mdx
@@ -17,12 +17,12 @@ scratch. You will learn things like:
 ## Playground
 
 Our [playground page](/playground) is a great resource to keep in mind as you go
-through these docs. This page allows you to test features of templates quickly
+through these docs. This page allows you to test features of Templates quickly
 and easily without touching code.
 
 ## Inspiration
 
-If you're looking for some inspiration, you can check out our default template
+If you're looking for some inspiration, you can check out our default templates
 code on
 [GitHub](https://github.com/marcellino-ornelas/templates/tree/master/.tps). Our
 templates always use best practices, advanced use cases, and incorporate new
