--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -21,7 +21,7 @@ recreating identical file structures in different locations. Think of this as a
 google doc template but for files and folders. When generating a new instance of
 this template, all files and directories within the template folder are rendered
 into the your new instance's directory. Templates also supports conditionally
-rending files and folders and dynamiclly rendering files and folders.
+and dynamiclly rendering files and folders.
 
 Don't worry about all this right now! More will be discussed later on. First,
 let's start with the basics.
