--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -28,19 +28,19 @@ let's start with the basics.
 
 ## Template Types
 
-There are 3 main types of templates:
+There are 2 main types of templates:
 
 -   [Local Templates](#local-templates)
 -   [Global Templates](#global-templates)
--   [3rd Party Templates](#3rd-party-templates)
+    {/* -   [3rd Party Templates](#3rd-party-templates) */}
 
 ### Local Templates
 
 Local templates are templates that live in your local directories. This could be
 your repository directory, subdirectories of your repository directory, or any
-directory on your file system. This is useful if you have repository-specific
-flows you are trying to automate. Local templates live in a `.tps` folder.
-Subdirectories of the `.tps` directory are your templates.
+directory on your file system. This is useful if you have repository-specific or
+directory specific flows you are trying to automate. Local templates live in a
+`.tps` folder. Subdirectories of the `.tps` directory are your templates.
 
 ```text
 | - <your-repo>/
@@ -136,9 +136,13 @@ file system. These templates still need to live in a `.tps` directory.
 
 You can create this global `.tps` directory by running:
 
+:::tip
+
 ```bash
 tps init --global
 ```
+
+:::
 
 {/* prettier-ignore */}
 {/* ### 3rd party Templates
