--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -143,7 +143,7 @@ file system. These templates still need to live in a `.tps` directory.
     | - <your-repo>/
         | - .tps/
             // highlight-next-line
-            | - react-component/
+            | - github-pull-request-template/
                 | - <template code...>
     ```
 
