--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -78,7 +78,7 @@ tps init
 
 When using the Templates CLI, Templates can use any template that's defined in a
 `.tps` directory in your current working directory or any parent directory. This
-means you can define multiple template folders in your repository. This can be
+means you can define multiple `.tps` folders in your repository. This can be
 useful when you want to segregate certain templates to specific parts of the
 codebase. Keep in mind that in order to use subdirectory templates, your
 terminal's current working directory needs to be that subdirectory.
