--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -16,38 +16,157 @@ We will be referring to `<some-name>` in our guide to represent any directory.
 
 :::
 
-A tps template is a collection of folders and files that acts as a blueprint for
+A template is a collection of folders and files that acts as a blueprint for
 recreating identical file structures in different locations. Think of this as a
 google doc template but for files and folders. When generating a new instance of
 this template, all files and directories within the template folder are rendered
-into the your new instance's directory. Tps also supports conditionally rending
-files and folders and dynamiclly rendering files and folders.
+into the your new instance's directory. Templates also supports conditionally
+and dynamiclly rendering files and folders.
 
 Don't worry about all this right now! More will be discussed later on. First,
 let's start with the basics.
 
-## Where do templates live
+## Template Types
 
-All templates need to live in a `.tps` folder. Subdirectories of the `.tps`
-directory are your templates. You may have as many templates as you wish.
+There are 2 main types of templates:
+
+-   [Local Templates](#local-templates)
+-   [Global Templates](#global-templates)
+    {/* -   [3rd Party Templates](#3rd-party-templates) */}
+
+### Local Templates
+
+Local templates are templates that live in your local directories. This could be
+your repository directory, subdirectories of your repository directory, or any
+directory on your file system. This is useful if you have repository-specific or
+directory specific flows you are trying to automate. Local templates live in a
+`.tps` folder. Subdirectories of the `.tps` directory are your templates.
 
 ```text
-| - .tps/
-    // highlight-next-line
-    | - <templates...>/
+| - <your-repo>/
+    | - .tps/
+        // highlight-next-line
+        | - <templates...>/
 ```
 
 <Example>
 
-If I were to make a new template called `react-component` then my folder
-structure would look like this:
+    If I were to make a new template called `react-component` that will generate
+    React components, then my folder structure would look like this:
 
-```text
-| - .tps/
-    | - react-component/
-```
+    ```text
+    | - <your-repo>/
+        | - .tps/
+            // highlight-next-line
+            | - react-component/
+                | - <template code...>
+    ```
 
 </Example>
+
+:::tip
+
+You can create this `.tps` directory by running:
+
+```bash
+tps init
+```
+
+:::
+
+#### Multiple Template Folders
+
+When using the Templates CLI, Templates can use any template that's defined in a
+`.tps` directory in your current working directory or any parent directory. This
+means you can define multiple `.tps` folders in your repository. This can be
+useful when you want to segregate certain templates to specific parts of the
+codebase. Keep in mind that in order to use subdirectory templates, your
+terminal's current working directory needs to be that subdirectory.
+
+```text
+| - <your-repo>/
+    // highlight-start
+    | - .tps/
+        | - <templates...>/
+    // highlight-end
+    | - some-sub-directory
+        // highlight-start
+        | - .tps/
+            | - <templates...>/
+        // highlight-end
+```
+
+<Example>
+
+    If you had a separate folder for your app's frontend codebase, then you can
+    define a `.tps` folder at the repo level and inside the frontend folder. This
+    would allow you to keep frontend-specific templates out of the main directory.
+
+    ```text
+    | - my-repo/
+        // highlight-start
+        | - .tps/
+            | - backend-api
+            // highlight-end
+        | - frontend
+            // highlight-start
+            | - .tps/
+                | - react-component
+            // highlight-end
+    ```
+
+    Now if your current working directory is `my-repo`, you will be able to use the
+    `backend-api` template. If your current working directory is `frontend`, then
+    you can use both `backend-api` and `react-component`.
+
+</Example>
+
+### Global Templates
+
+Global templates are similar to local templates but they live in your home
+directory. This is useful when you want to share templates across your whole
+file system. These templates still need to live in a `.tps` directory.
+
+```text
+| - ~/
+    | - .tps/
+        // highlight-next-line
+        | - <templates...>/
+```
+
+<Example>
+
+    If I were to make a new template called `github-pull-request-template` that will generate
+    React components, then my folder structure would look like this:
+
+    ```text
+    | - ~/
+        | - .tps/
+            // highlight-next-line
+            | - github-pull-request-template/
+                | - <template code...>
+    ```
+
+</Example>
+
+:::tip
+
+You can create this global `.tps` directory by running:
+
+```bash
+tps init --global
+```
+
+:::
+
+{/* prettier-ignore */}
+{/* ### 3rd party Templates
+
+3rd party templates are templates that will be published to your choice of
+package manager like npm/yarn/pnpm. This allows other developers to use your
+template by installing it globally or locally. There are special considerations
+you need to think about when making 3rd party template that we will touch on in
+our [3rd party templates guide](./3rd-party-templates.mdx). \*/}
 
 ## Packages
 
@@ -63,10 +182,10 @@ Inside of each `template` you can have directories referred to as `packages`.
 Within each package directory, you have the freedom to add an unlimited number
 of files and directories. These resources will then be utilized when generating
 a new instance of your template. You can name packages anything you wish, but
-TPS treats the `default` package as special. When rendering a new instance of a
-template, TPS will automatically include all the contents _(files/directories)_
-within your `default` package. All other packages will only be included if
-explicitly specified.
+Templates treats the `default` package as special. When rendering a new instance
+of a template, Templates will automatically include all the contents
+_(files/directories)_ within your `default` package. All other packages will
+only be included if explicitly specified.
 
 <Example open>
 
