--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -137,7 +137,7 @@ file system. These templates still need to live in a `.tps` directory.
 <Example>
 
     If I were to make a new template called `github-pull-request-template` that will generate
-    React components, then my folder structure would look like this:
+    a github pull request template file, then my folder structure would look like this:
 
     ```text
     | - ~/
