--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -28,11 +28,11 @@ let's start with the basics.
 
 ## Template Types
 
-There are 2 main types of templates:
+There are 3 main types of templates:
 
 -   [Local Templates](#local-templates)
 -   [Global Templates](#global-templates)
-    {/* -   [3rd Party Templates](#3rd-party-templates) */}
+-   [3rd Party Templates](#3rd-party-templates)
 
 ### Local Templates
 
@@ -159,14 +159,13 @@ tps init --global
 
 :::
 
-{/* prettier-ignore */}
-{/* ### 3rd party Templates
+### 3rd party Templates
 
 3rd party templates are templates that will be published to your choice of
 package manager like npm/yarn/pnpm. This allows other developers to use your
 template by installing it globally or locally. There are special considerations
 you need to think about when making 3rd party template that we will touch on in
-our [3rd party templates guide](./3rd-party-templates.mdx). \*/}
+our [3rd party templates guide](./3rd-party-templates.mdx).
 
 ## Packages
 
