remove serve from docs

--- a/docs/docs/main/templates/express-app.mdx
+++ b/docs/docs/main/templates/express-app.mdx
@@ -243,9 +243,6 @@ following command to start the app:
 ```bash
 npm run build && npm run start
 
-# Dev mode with nodemon
+# Dev mode with nodemon + tsx
 npm run dev
-
-# Use serve if you want to run with ts-node
-npm run serve
 ```
