--- a/docs/docs/api/template.mdx
+++ b/docs/docs/api/template.mdx
@@ -16,7 +16,7 @@ interface Template {
 ```
 
 ```ts title="Usage"
-await Templates.get('<template-name>', {
+new Templates('<template-name>', {
     /* template options ... */
 });
 ```
@@ -24,7 +24,7 @@ await Templates.get('<template-name>', {
 <Example>
 
 ```ts
-await Templates.get('react-component', {
+new Templates('react-component', {
     wipe: true,
 });
 ```
@@ -73,7 +73,7 @@ Optional path to add prepend to each
 <TabItem value="node" label="Node">
 
 ```ts
-await Templates.get('react-component', {
+new Templates('react-component', {
     extendDest: './path/to/some/directory',
 });
 ```
@@ -144,7 +144,7 @@ value.
 <TabItem value="node" label="Node">
 
 ```ts
-await Templates.get('react-component', {
+new Templates('react-component', {
     // highlight-next-line
     extendDest: './src',
 });
@@ -209,7 +209,7 @@ potential conflicts during the rendering process.
 <TabItem value="node" label="Node">
 
 ```ts
-await Templates.get('react-component', {
+new Templates('react-component', {
     // highlight-next-line
     wipe: true,
 });
@@ -302,7 +302,7 @@ conflicts.
 <TabItem value="node" label="Node">
 
 ```ts
-await Templates.get('react-component', {
+new Templates('react-component', {
     // highlight-next-line
     force: true,
 });
@@ -429,7 +429,7 @@ in progress.
 <TabItem value="node" label="Node">
 
 ```ts
-await Templates.get('react-component', {
+new Templates('react-component', {
     // highlight-next-line
     newFolder: false,
 });
@@ -533,7 +533,7 @@ tps react-component Nav --hidden
 <TabItem value="node" label="Node">
 
 ```ts
-await Templates.get('react-component', {
+new Templates('react-component', {
     // highlight-next-line
     hidden: true,
 });
