--- a/docs/docs/main/create-new-template/index.mdx
+++ b/docs/docs/main/create-new-template/index.mdx
@@ -3,7 +3,7 @@ pagination_next: main/create-new-template/templates
 pagination_prev: main/intro
 ---
 
-# Creating await Templates.get
+# Creating New Templates
 
 This guide will walk you through the process of creating a new template from
 scratch. You will learn things like:
