--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -677,7 +677,7 @@ tps express-app app -f react
 ```js
 const Templates = require('tps');
 
-const tps = await Templates.get('express-app');
+const tps = new Templates('express-app');
 
 tps.setAnswers({ f: 'react' });
 ```
